--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
@@ -7,7 +6,10 @@
 
   <body>
     <!-- the entire body must be written by student -->
+    <div id="loading" style="display: none;">Loading...</div>
+    <div id="error"></div>
     <div id="output"></div>
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
