--- a/main.html
+++ b/main.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <title>Image Downloader - Promise.all</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <!-- the entire body must be written by student -->
-    <div id="loading" style="display: none;">Loading...</div>
-    <div id="error"></div>
-    <div id="output"></div>
+    <!-- required elements for tests -->
+    <div id="loading">Loading...</div>
+    <div id="error" role="alert"></div>
+    <div id="output" aria-live="polite"></div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
